--- a/messages.pot
+++ b/messages.pot
@@ -297,7 +297,7 @@ msgstr ""
 
 #: application/flicket/templates/flicket_navbar.html:17
 #: application/flicket/views/tickets.py:84
-msgid "My Tickets"
+msgid "Mis Tickets"
 msgstr ""
 
 #: application/flicket/templates/flicket_navbar.html:18
